the event list in the sidebar no longer overlaps with the event editor

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
   overflow-x: hidden;
   background-color: #111;
   color: #818181;
+  display: flex;
+  flex-flow: column;
 }
 #sidebar.menu-open {
   left: 0;
@@ -37,6 +39,12 @@
   #main.menu-open {
       left: 400px;
   }
+}
+#event-list {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  overflow-y: auto;
 }
 #sidebar div, #sidebar table {
   padding: 16px;
@@ -77,9 +85,9 @@
   color: #f1f1f1;
 }
 #bulk-editor {
-  position: absolute;
-  bottom: 0;
   width: 100%;
+  flex-grow: 0;
+  flex-shrink: 1;
 }
 #bulk-editor textarea {
   resize: none;
